--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -51,20 +51,12 @@
     <url-pattern>/index</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>guest_servlet</servlet-name>
-    <servlet-class>servlets.GuestGUI</servlet-class>
+    <servlet-name>member_servlet</servlet-name>
+    <servlet-class>servlets.MemberGUI</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>guest_servlet</servlet-name>
-    <url-pattern>/guestgui</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>staffmember_servlet</servlet-name>
-    <servlet-class>servlets.StaffmemberGUI</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>staffmember_servlet</servlet-name>
-    <url-pattern>/staffmembergui</url-pattern>
+    <servlet-name>member_servlet</servlet-name>
+    <url-pattern>/calendar</url-pattern>
   </servlet-mapping>
   <servlet>
     <servlet-name>error404_servlet</servlet-name>
